# plugcut

./: .gitignore  CLAUDE.md  DESIGN.md  PLUGCUT-brief.txt  README.md
.do/: app.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18c7b92e6ab7_add_invitation_token_and_signatures_to_.py  296de4d62569_add_dispute_fields_to_referrals.py  3c8d45cfc3d7_create_users_table.py  4c0f82d5c898_add_last_reminded_at_to_commission_.py  657f4e241150_create_commission_installments_table.py  73a418f1eb23_create_intro_requests_table.py  8a65632a32ab_create_referrals_table.py  c2087dec4d48_create_profiles_table.py  d36469d2c83f_add_paid_at_to_commission_installments.py  dcfc45fd94a5_add_payment_proof_to_commission_.py  edef8ad903b9_create_contacts_table.py
backend/app/: main.py
backend/app/application/contacts/: dtos.py  errors.py  ports.py  use_cases.py
backend/app/infrastructure/: config.py
backend/scripts/: prod_seed.py
backend/tests/: fakes.py
backend/tests/integration/: test_account.py  test_auth_api.py  test_contacts_api.py  test_intro_api.py  test_invitation_api.py  test_profile_api.py  test_referral_lifecycle.py  test_referrals_api.py  test_reputation.py
backend/tests/unit/: test_agreement_renderer.py  test_commission_schedule.py  test_contact.py  test_evidence_renderer.py  test_identity.py  test_intro.py  test_invoice_renderer.py  test_pdf_importer.py  test_profile.py  test_referral.py  test_reminder_renderer.py  test_reputation.py  test_security.py  test_value_objects.py
docs/: DEPLOY.md  (+2 more)
(+163 files in other folders)
